--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "ConnectionStrings": {    "GUserInterfaceDbContext": "Host=185.173.104.253:4523;Database=G_UserInterface_DB;Username=postgres;Password=T@l@7est;SearchPath=public",
-
+  "ConnectionStrings": {
+    "GUserInterfaceDbContext": "Host=185.173.104.253:4523;Database=G_UserInterface_DB;Username=postgres;Password=T@l@7est;SearchPath=public"
   },
   "Logging": {
     "LogLevel": {
